fix button sizing scale, footer overflow and padding

--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -4,7 +4,6 @@
   align-content: space-between;
   width: 100vw;
   font-size: 0.6em;
-
   flex-direction: row;
   flex-wrap: wrap;
   padding: 1%;
@@ -20,6 +19,7 @@ footer {
 .definition{
   color: rgb(236, 236, 236);
   font-size: 0.6em;
+  padding-bottom: 0;
 }
 .instructions {
   display: inherit;
