--- a/src/components/LoginForm/login-form.css
+++ b/src/components/LoginForm/login-form.css
@@ -18,8 +18,8 @@
 }
 
 .form_button {
-  padding: 3%;
-  margin-top: 2%;
+  padding: 15px;
+  margin-top: 12px;
   border: none;
   font-size: 1em;
   background-color: #026BB1;
