--- a/src/routes/RegisterPage/RegisterPage.css
+++ b/src/routes/RegisterPage/RegisterPage.css
@@ -8,7 +8,7 @@
   font-size: xx-small;
   max-width: 50%;
   text-align: center;
-  padding: 1% 20%;
+  padding: 10px 10px 30px 10px;
   margin: inherit;
 }
 
